--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -15,6 +15,7 @@
             <ul tabindex="0"
                 class="menu menu-sm dropdown-content right-0 mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
                 <li><a class="<%= (page == '/sites') ? 'active' : '' %>" href="/sites">View Site Collection</a></li>
+                <li><a class="<%= (page == '/addSite') ? 'active' : '' %>" href="/addSite">Add to Collection</a></li>
                 <li><a class="<%= (page == "/about") ? 'active' : '' %>" href="/about">About</a></li>    
             </ul>
         </div>
@@ -22,6 +23,7 @@
         <div class="navbar-center hidden sm:flex">
             <ul class="menu menu-horizontal px-1">
                 <li><a class="<%= (page == '/sites') ? 'active' : '' %>" href="/sites">View Site Collection</a></li>
+                <li><a class="<%= (page == '/addSite') ? 'active' : '' %>" href="/addSite">Add to Collection</a></li>
                 <li><a class="<%= (page == "/about") ? 'active' : '' %>" href="/about">About</a></li>    
             </ul>
         </div>
